tests-integration/fixtures/checking/1772565480_derive_traversable_missing_superclass/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Compose ::
  forall (t4 :: Type) (t3 :: Type) (@f :: (t4 :: Type) -> Type) (@g :: (t3 :: Type) -> (t4 :: Type))
    (@a :: (t3 :: Type)).
    (f :: (t4 :: Type) -> Type) ((g :: (t3 :: Type) -> (t4 :: Type)) (a :: (t3 :: Type))) ->
    Compose @(t4 :: Type) @(t3 :: Type)
      (f :: (t4 :: Type) -> Type)
      (g :: (t3 :: Type) -> (t4 :: Type))
      (a :: (t3 :: Type))

Types
Compose ::
  forall (t4 :: Type) (t3 :: Type).
    ((t4 :: Type) -> Type) -> ((t3 :: Type) -> (t4 :: Type)) -> (t3 :: Type) -> Type

Derived
derive forall (t5 :: Type -> Type) (t6 :: Type -> Type).
  Traversable (t5 :: Type -> Type) =>
  Traversable (t6 :: Type -> Type) =>
  Traversable (Compose @Type @Type (t5 :: Type -> Type) (t6 :: Type -> Type))

Roles
Compose = [Representational, Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (Compose @Type @Type (t5 :: Type -> Type) (t6 :: Type -> Type))
	given
	Traversable (t5 :: Type -> Type)
	Traversable (t6 :: Type -> Type)
	Functor (t5 :: Type -> Type)
	Foldable (t5 :: Type -> Type)
	Functor (t6 :: Type -> Type)
	Foldable (t6 :: Type -> Type)
  --> 6:1..6:76
  |
6 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Foldable (Compose @Type @Type (t5 :: Type -> Type) (t6 :: Type -> Type))
	given
	Traversable (t5 :: Type -> Type)
	Traversable (t6 :: Type -> Type)
	Functor (t5 :: Type -> Type)
	Foldable (t5 :: Type -> Type)
	Functor (t6 :: Type -> Type)
	Foldable (t6 :: Type -> Type)
  --> 6:1..6:76
  |
6 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
